--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
     :root {
         --radius: 0.5rem;
     }
+
 }
 
 @layer utilities {
@@ -182,8 +183,14 @@
     }
 
     .startup-form_btn {
-        @apply bg-primary border-[4px] border-black rounded-full p-5 min-h-[70px] w-full font-bold text-[18px] !important;
+        @apply bg-primary border-[4px] border-black rounded-full p-5 min-h-[70px] w-full font-bold text-[18px] hover:bg-[#f92f87] !important;
     }
+
+    .startup-form_btn:hover .startup-form_btnIcon{
+        @apply animate-bounce
+    }
+
+
 
     /* view */
     .view-container {
